<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我要打车</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="beginPoint">起点设置</string>
    <string name="endPoint">终点设置</string>
    <string name="callCar">成功叫车</string>
    <string name="back">返回</string>
    <string name="begin">起点：</string>
    <string name="enterBegin">输入起点位置</string>
    <string name="loadingAdd">正在加载地址中……</string>
    <string name="loadAddFail">获取地址失败</string>
    <string name="beginCall">开始叫车</string>
    <string name="waitCall">等待叫车</string>
    <string name="cacelCall">取消打车</string>
    <string name="sureCall">确认叫车</string>
    <string name="beginErr">请获取当前地址后才能叫车！</string>
    <string name="endStation">终点站</string>
    <string name="keyHint">输入关键字</string>
    <string name="passNum">乘车人数</string>
    <string name="chooseCustomer">请选择乘车人数</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="enterEnd">请输入终点站信息！</string>
    <string name="chooseType">请选择乘车人数！</string>
    <string name="refresh">刷新</string>
    <string name="username">用户名：</string>
    <string name="pwd">密码：</string>
    <string name="repwd">确认密码：</string>
    <string name="noUserNameErr">请输入用户名！</string>
    <string name="noPwdErr">请输入密码！</string>
    <string name="loading_data">加载数据</string>
    <string name="waiting">正在加载数据中……</string>
    <string name="saving">正在保存数据中……</string>
    <string name="loginFail">登陆失败</string>
    <string name="registerFail">注册失败！</string>
    <string name="name">姓名：</string>
    <string name="registing">正在注册……</string>
    <string name="sending">正在发布……</string>
    <string name="sendSuccess">信息发布成功！</string>
    <string name="continu">OK，继续</string>
    <string name="waitingCar">正在等待附近车辆确认，请耐心等待！</string>
    <string name="canceling">正在取消中……</string>
    <string name="callMsg">您的目的地为%1$s，乘车人数为%2$s。确认后您附近的车辆将看到您的乘车信息并拉乘您。如您不乘坐请取消本次叫车，以免影响您的信誉度！</string>
    <string name="setting">设置</string>
    <string name="callRecord">叫车记录</string>
    <string name="callHistory">历史叫车</string>
    <string name="nextstep">下一步</string>
    <string name="nameHint">姓  名</string>
    <string name="pwdHint">修改密码</string>
    <string name="jingYinHint">静音模式</string>
    <string name="nameEdit">修改></string>
    <string name="pwdSetHint">未设置></string>
    <string name="jingYinSetHint">已关闭</string>
    <string name="contactUS">联系我们</string>
    <string name="aboutSoft">关于软件</string>
    <string name="flag">></string>
    <string name="udpateCheck">升级检查</string>
    <string name="Hint">提示</string>
    <string name="exitHint">退出</string>
    <string name="aboutContent">\r本应用是一款叫车应用，方便您的出行，帮你快速到达目的地！\n\n\r本应用作者：\n\r\r荣冬 赵岳</string>
    <string name="versionUpdate">版本升级</string>
    <string name="NotNeedUpt">您当前的版本是最新版本，无需升级！</string>
    <string name="nameSetting">姓名设置</string>
    <string name="pwdSetting">密码设置</string>
    <string name="enterXing">在此输入您的姓</string>
    <string name="enterMing">在此输入您的名</string>
    <string name="enterNichen">在此输入您的昵称</string>
    <string name="enterOldPwd">输入您的旧密码</string>
    <string name="enterNewPwd">输入您的新密码</string>
    <string name="save">确认保存</string>
    <string name="enterOldPwdHint">请输入旧密码！</string>
    <string name="enterNewOwdHint">请输入新密码！</string>
    <string name="pwdNoEqualHint">新密码和确认密码不一致！</string>
    <string name="changePwdFail">修改密码失败！</string>
    <string name="noEnough">请输入至少六位密码！</string>
    <string name="noMore">输入密码请勿超过18位！</string>
    <string name="pwdRegx">密码必须由字母、数字和标点符号组成！</string>
    <string name="historyFail">网络繁忙，请稍后重试！</string>
    <string name="noMorehistory">没有更多数据！</string>
    <string name="complaints">投诉</string>
    <string name="complaintsHint">我要投诉</string>
    <string name="saySomething">我有话要说</string>
    <string name="suggest">您的建议：</string>
    <string name="suggestHint">请输入您的投诉、意见和建议，以帮助我们更好的改进产品。</string>
    <string name="contact">您的联系方式：</string>
    <string name="contanctHint">手机、QQ或者其他（选填）。</string>
    <string name="detailRoute">详细路线</string>
    <string name="exitChoose">您确定要退出吗？</string>
    <string name="cancelCallHint">请勿退出，退出将取消叫车！您确定要取消叫车吗？</string>

</resources>