<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20.0dip"
            android:text="@string/waitCall"
            android:textColor="@android:color/white"
            android:textSize="20.0sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5.0dip"
            android:layout_marginRight="10.0dip"
            android:background="@drawable/btn_selector"
            android:padding="5.0dip"
            android:text="@string/back"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/top" >

        <RelativeLayout
            android:id="@+id/content_row1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="10.0dip" >

            <TextView
                android:id="@+id/Success_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10.0dip"
                android:text="@string/sendSuccess"
                android:textColor="@android:color/black"
                android:textSize="20.0dip"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_below="@id/Success_txt"
                android:background="@drawable/line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/content_row2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="10.0dip" >

            <Button
                android:id="@+id/coutinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10.0dip"
                android:background="@drawable/long_yellow_button_selector"
                android:text="@string/continu"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <View
                android:id="@+id/line"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_below="@id/coutinue"
                android:background="@drawable/line" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line"
                android:layout_centerInParent="true"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/long_button_selector"
                android:text="@string/cacelCall"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/content_row2"
            android:layout_below="@id/content_row1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/waitingCar"
                android:textColor="@color/gray"
                android:textSize="18.0dip" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>