<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20.0dip"
            android:text="@string/endPoint"
            android:textColor="@android:color/white"
            android:textSize="20.0sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5.0dip"
            android:layout_marginRight="10.0dip"
            android:background="@drawable/btn_selector"
            android:padding="5.0dip"
            android:text="@string/back"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/top" >

        <RelativeLayout
            android:id="@+id/row1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10.0dip" >

            <TextView
                android:id="@+id/endStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/endStation"
                android:textColor="@color/hintColor"
                android:textSize="18.0sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/row2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row1" >

            <AutoCompleteTextView
                android:id="@+id/endName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/input2_bg"
                android:completionThreshold="1"
                android:hint="@string/keyHint"
                android:paddingLeft="5.0dip" />
        </RelativeLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_below="@id/row2"
            android:layout_margin="10.0dip"
            android:background="@drawable/line" />

        <RelativeLayout
            android:id="@+id/row3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:padding="10.0dip" >

            <TextView
                android:id="@+id/customerNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/passNum"
                android:textColor="@color/hintColor"
                android:textSize="18.0sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/row4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row3" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/ShowDropDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/autotext_selecotr"
                    android:gravity="left|center_vertical"
                    android:hint="@string/chooseCustomer"
                    android:padding="5.0dip"
                    android:textColor="@color/ddlColor"
                    android:textSize="16.0sp" />

                <ListView
                    android:id="@+id/customerChooseList"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:cacheColorHint="#000000"
                    android:divider="@drawable/div"
                    android:visibility="gone" >
                </ListView>
            </LinearLayout>
        </RelativeLayout>

        <View
            android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_below="@id/row4"
            android:layout_margin="10.0dip"
            android:background="@drawable/line" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2"
            android:padding="20.0dip" >

            <Button
                android:id="@+id/nextStep"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/long_button_selector"
                android:text="@string/sure"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>