<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20.0dip"
            android:text="@string/complaintsHint"
            android:textColor="@android:color/white"
            android:textSize="20.0sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5.0dip"
            android:layout_marginRight="10.0dip"
            android:background="@drawable/btn_selector"
            android:padding="5.0dip"
            android:text="@string/back"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/top"
        android:orientation="vertical"
        android:padding="10.0dip" >

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20.0dip"
                android:text="请选择投诉原因"
                android:textColor="@color/hintColor"
                android:textSize="20.0sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@drawable/line" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowbottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_say"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:background="@drawable/long_yellow_button_selector"
                android:text="@string/saySomething"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_complant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:background="@drawable/long_button_selector"
                android:text="@string/complaints"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/complantList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/rowbottom"
            android:layout_below="@id/row1"
            android:cacheColorHint="#00000000"
            android:divider="@drawable/line"
            android:dividerHeight="1.0dip"
            android:scrollbars="none" >
        </ListView>
    </RelativeLayout>

</RelativeLayout>