<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20.0dip"
            android:text="@string/callCar"
            android:textColor="@android:color/white"
            android:textSize="20.0sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5.0dip"
            android:layout_marginRight="10.0dip"
            android:background="@drawable/btn_selector"
            android:padding="5.0dip"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="5.0dip" >

        <Button
            android:id="@+id/local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/local_selector" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/local"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/long_button_selector"
                android:text="@string/sure"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/long_button_selector"
                android:text="@string/detailRoute"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom"
        android:layout_below="@id/top" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/loadText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="正在进行定位，请稍候……"
                android:textSize="25.0sp" />
        </RelativeLayout>

        <com.baidu.mapapi.MapView
            android:id="@+id/bmapView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:visibility="gone" />

        <com.rd.callcar.view.MarqueeText
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialy_bg"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:visibility="gone" />
    </FrameLayout>

</RelativeLayout>